--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,84 +1,202 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/lib/tylerwoodfin.com.fourlittleletters"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_gravity="center_vertical"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:background="#212121">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/tutorial_tap_a"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Easy! Touch the A."
+        android:textAlignment="textStart"
+        android:textColor="@android:color/holo_blue_light"
+        android:textSize="20dp"
+        android:layout_below="@+id/tutorial_your_word"
+        android:layout_alignParentStart="true" />
+
+    <TextView
         android:id="@+id/MainText"
-        android:textSize="30dp"
-        android:textColor="#FFFFFF" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="L"
+        android:layout_weight=".25"
+        android:text="@string/hello_world"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="34dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
         android:id="@+id/letter1"
-        android:layout_below="@+id/MainText"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="171dp"
-        android:width="80dp"
-        android:textSize="80dp"
-        android:fontFamily="mono"
-        android:focusable="true"
-        android:textColorHighlight="#FF3F80"
-        android:textColor="#FFFFFF"
-        android:onClick="onClick"
-        android:clickable="true"/>
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_marginTop="114dp"
+        android:width="80dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:fontFamily="mono"
+        android:gravity="center"
+        android:onClick="onClick"
         android:text="L"
+        android:textAlignment="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="#FF3F80"
+        android:textSize="80dp"
+        android:layout_below="@+id/bombHints"
+        android:layout_toStartOf="@+id/letter2" />
+
+    <TextView
         android:id="@+id/letter2"
-        android:width="80dp"
-        android:textSize="80dp"
-        android:fontFamily="mono"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/letter1"
         android:layout_alignBottom="@+id/letter1"
-        android:layout_toEndOf="@+id/letter1"
+        android:layout_toStartOf="@+id/letter3"
+        android:layout_weight=".25"
+        android:width="80dp"
+        android:clickable="true"
         android:focusable="true"
-        android:textColorHighlight="#FF3F80"
-        android:textColor="#FFFFFF"
+        android:fontFamily="mono"
+        android:gravity="center"
         android:onClick="onClick"
-        android:clickable="true"/>
+        android:text="L"
+        android:textAlignment="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="#FF3F80"
+        android:textSize="80dp" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="L"
         android:id="@+id/letter3"
-        android:width="80dp"
-        android:textSize="80dp"
-        android:fontFamily="mono"
-        android:layout_alignBottom="@+id/letter2"
-        android:layout_toEndOf="@+id/letter2"
-        android:focusable="true"
-        android:textColorHighlight="#FF3F80"
-        android:textColor="#FFFFFF"
-        android:onClick="onClick"
-        android:clickable="true"/>
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="L"
-        android:id="@+id/letter4"
+        android:layout_alignBaseline="@+id/letter2"
+        android:layout_alignBottom="@+id/letter2"
+        android:layout_toStartOf="@+id/letter4"
+        android:layout_weight=".25"
         android:width="80dp"
-        android:textSize="80dp"
-        android:fontFamily="mono"
-        android:layout_alignBottom="@+id/letter3"
-        android:layout_toEndOf="@+id/letter3"
+        android:clickable="true"
         android:focusable="true"
-        android:textColorHighlight="#FF3F80"
-        android:textColor="#FFFFFF"
+        android:fontFamily="mono"
+        android:gravity="center"
         android:onClick="onClick"
-        android:clickable="true"/>
+        android:text="L"
+        android:textAlignment="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="#FF3F80"
+        android:textSize="80dp" />
+
+    <TextView
+        android:id="@+id/letter4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/letter3"
+        android:layout_alignBottom="@+id/letter3"
+        android:layout_toStartOf="@+id/scoreText"
+        android:layout_weight=".25"
+        android:width="80dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:fontFamily="mono"
+        android:gravity="center"
+        android:onClick="onClick"
+        android:text="L"
+        android:textAlignment="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="#FF3F80"
+        android:textSize="80dp" />
+
+    <TextView
+        android:id="@+id/scoreText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/score"
+        android:textColor="@android:color/holo_green_dark"
+        android:textSize="30dp" />
+
+    <ImageView
+        android:id="@+id/bomb"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:adjustViewBounds="false"
+        android:cropToPadding="false"
+        android:maxHeight="30dp"
+        android:maxWidth="30dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/bomb"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/letter1" />
+
+    <ImageView
+        android:id="@+id/music"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:adjustViewBounds="false"
+        android:cropToPadding="false"
+        android:maxHeight="30dp"
+        android:maxWidth="30dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/music" />
+
+    <ImageView
+        android:id="@+id/refresh"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:adjustViewBounds="false"
+        android:cropToPadding="false"
+        android:maxHeight="30dp"
+        android:maxWidth="30dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/refresh" />
+
+    <TextView
+        android:id="@+id/bombHints"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/MainText"
+        android:layout_marginTop="27dp"
+        android:textAlignment="center"
+        android:textColor="@android:color/holo_purple"
+        android:textSize="25dp" />
+
+    <TextView
+        android:id="@+id/tutorial_your_word"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="How can you turn a ball into a bill?"
+        android:textAlignment="center"
+        android:textColor="@android:color/holo_blue_light"
+        android:textSize="20dp"
+        android:layout_below="@+id/bombHints"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="6dp" />
+
+    <TextView
+        android:id="@+id/tutorial_type_i"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/letter2"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="11dp"
+        android:text="Good! Now press I to spell BILL."
+        android:textAlignment="textStart"
+        android:textColor="@android:color/holo_blue_light"
+        android:textSize="20dp" />
 
 </RelativeLayout>
